static/css/app.css
body {
  background: #1a0315;
  color: #fff;
}

.primary-pane {
  padding: 1rem 0;    
  background: #6E3667;
  color: #fff;
}

.primary-pane .emph {
  background: #6E3667;
  color: ##b8d76d;
}

.panel-relaxed {
  background: #535353;
  color: #fff;
}

.main-cont {
  padding-top: 1em;
}

.footer { 
  margin-top: 1rem;
  text-align: right; 
}

.player-container {
  text-align: center;
}

.panel-relaxed a {
  color: #fff;
  text-decoration: underline;
}

